# Voxel-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  optimzations.txt
builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  minecraft.sln  minecraft.vcxproj  minecraft.vcxproj.filters
builds/minecraft.dir/Debug/: minecraft.exe.recipe
builds/minecraft.dir/Debug/minecraft.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
builds/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
builds/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
builds/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
builds/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
dependencies/include/: Camera.h  Player.h  Shader.h  World.h
dependencies/include/glad/: glad.h
dependencies/include/imgui/: desktop.ini
dependencies/shaders/: block.frag  block.vert
src/: Shader.cpp  glad.c  main.cpp
